--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <select id="surat"></select>
         </div>
 
-        <button onclick="playFullSurah()">Putar Surat Lengkap</button>
+        <button onclick="playFullSurah()">Play Full Surah</button>
 
         <audio id="player" controls style="display:none;"></audio>
         <div id="quranText"></div>
